created client enrollment detail api and its specs
