# app/controllers/client_enrollments_controller.rb
@@ -1,14 +1,26 @@
 class ClientEnrollmentsController < ApplicationController
   before_action :authenticate_user!
+  before_action :set_client
+  before_action :set_client_enrollment, only: :show
 
   def create
-    @client_enrollment = ClientEnrollment.create(enrollment_params)
+    @client_enrollment = @client.client_enrollments.create(enrollment_params)
   end
+
+  def show; end
 
   private
 
   def enrollment_params
     params.permit(:client_id, :funding_source_id, :enrollment_date, :terminated_at, 
                   :insureds_name, :notes, :top_invoice_note, :bottom_invoice_note)
+  end
+
+  def set_client
+    @client = Client.find(params[:client_id])
+  end
+
+  def set_client_enrollment
+    @client_enrollment = @client.client_enrollments.find(params[:id])
   end
 end
